# syn

./: .gitignore  LICENSE  README.md  environment.yml  mysetup.bash  pyproject.toml
conditional-aoas/: tabular.ipynb  utils_data.py
tab-ddpm/syn/: agg_table.py  environment.yml  prediction_pool_main.ipynb  prediction_pool_main.py  prediction_pool_tune.py  pyproject.toml  tabddpm-ad21.ipynb  tabddpm-adult.ipynb
tab-ddpm/syn/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
tab-ddpm/syn/catboost_info/learn/: events.out.tfevents
tab-ddpm/syn/catboost_info/test/: events.out.tfevents
tab-ddpm/syn/fake_to_real_ratio/: ratio_list_california_rmse.pkl
tab-ddpm/syn/ratio_optuna_studies/: abalone.db  churn2.db  churn2_acc.db  fb-comments.db  gesture.db  house_rmse.db
tab-ddpm/syn/syninf/: synboost_transfer.ipynb  synboost_transfer_adult_male.pkl  utils_syninf.py  utils_viz.py
tab-ddpm/syn/syninf/adult_female_3000/: syninf_res.ipynb
tab-ddpm/syn/syninf/adult_female_3000/null_model_ckpt/twin_1_age_educationl-num_hours-per-week/: hours-per-week.ckpt
tab-ddpm/syn/syninf/adult_female_3000/null_model_ckpt/twin_2_age_educationl-num_hours-per-week/: age.ckpt  educationl-num.ckpt
tab-ddpm/syn/syninf/adult_female_3000/syn_pred_sample/: train_df_merged.csv
tab-ddpm/syn/syninf/adult_female_3000/syngen_inf_result/: result_dict_age_educationl-num_hours-per-week.pkl
tab-ddpm/syn/syninf/california/syngen_inf_result/: result_dict_MedInc.pkl
tab-ddpm/syn/syninf/simulation_ablation/inference/: investigate.ipynb  sample.py  temp.py
tab-ddpm/syn/syninf/simulation_ablation/inference/ckpt/: base_config.toml
tab-ddpm/syn/syninf/simulation_ablation/inference/ckpt/inf_10000/: config.toml  loss.csv  model_ema.pt
tab-ddpm/syn/syninf/simulation_ablation/inference/ckpt/inf_10000_twin_1/: config.toml  loss.csv  model_ema.pt
tab-ddpm/syn/syninf/simulation_ablation/inference/ckpt/inf_10000_twin_2/: loss.csv  model_ema.pt
tab-ddpm/syn/syninf/simulation_ablation/inference/ckpt/inf_2000/: model.pt  pipeline_dict.joblib
tab-ddpm/syn/syninf/simulation_ablation/inference/ckpt/inf_2000_twin_1/: loss.csv  model.pt
tab-ddpm/syn/syninf/simulation_ablation/inference/ckpt/inf_2000_twin_2/: config.toml  model.pt
tab-ddpm/syn/syninf/simulation_ablation/prediction/: sample.py
tab-ddpm/syn/syninf/simulation_ablation/prediction/ckpt/: base_config.toml
tab-ddpm/syn/syninf/simulation_ablation/prediction/results/: reg_1000.pkl  reg_1000_finetuned.pkl  reg_5000.pkl  reg_5000_finetuned.pkl
(+287 files in other folders)
