[tool.poetry]
name = "tddpm"
version = "0.1.0"
description = "Syn- for boosting ML accuracy and statistical powers"
authors = ["Yifei Liu <liu00980@umn.edu>", "Rex Shen <rshen0@stanford.edu>", "Xiaotong Shen <xshen@umn.edu >"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.18"
torch = {url = "https://download.pytorch.org/whl/cu102/torch-1.12.1%2Bcu102-cp39-cp39-linux_x86_64.whl"}
torchaudio = {url = "https://download.pytorch.org/whl/cu102/torchaudio-0.12.1%2Bcu102-cp39-cp39-linux_x86_64.whl"}
torchvision = {url = "https://download.pytorch.org/whl/cu102/torchvision-0.13.1%2Bcu102-cp39-cp39-linux_x86_64.whl"}
matplotlib = "^3.8.1"
torchmetrics = {extras = ["image"], version = "^1.2.0"}
seaborn = "^0.13.0"

catboost = "1.0.3"
category-encoders = "2.3.0"
dython = "0.5.1"
icecream = "2.1.2"
libzero = "0.0.8"
numpy = "1.22"
optuna = "2.10.1"
pandas = "1.3.4"
pyarrow = "6.0.0"
rtdl = "0.0.9"
scikit_learn = "1.0.2"
scipy = "1.7.2"
skorch = "0.11.0"
tomli_w = "0.4.0"
tomli = "1.2.2"
tqdm = "4.62.3"
lightning = "^2.1.2"
dcor = "^0.6"
pot = "^0.9.1"

